--- a/diplomacy/index.html
+++ b/diplomacy/index.html
@@ -107,6 +107,18 @@
     <div class="results"><h3 class="w3-display-middle">Deadline for issuing movement orders is Sunday 21st February at 1200 GMT.</h3></div>
     <iframe class="status" src="static/S1872Dsta.html" width="100%" style="border:none;"></iframe>
   </div>
+  <div class="rounds">
+    <img class="maps" src="static/Standard (6 Players)-S1872Ma.png" style="width:100%">
+    <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Spring 1872 movement orders</div>
+    <iframe class="results" src="static/S1872Mres.html" width="100%" style="border:none;"></iframe>
+    <iframe class="status" src="static/S1872Msta.html" width="100%" style="border:none;"></iframe>
+  </div>
+  <div class="rounds">
+    <img class="maps" src="static/Standard (6 Players)-F1872M.png" style="width:100%">
+    <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Fall 1872 starting position</div>
+    <div class="results"><h3 class="w3-display-middle">Deadline for issuing movement orders is Wednesday 24th February at 1800 GMT.</h3></div>
+    <iframe class="status" src="static/F1872Dsta.html" width="100%" style="border:none;"></iframe>
+  </div>
 
   <button class="earlier w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
   <button class="later w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
