--- a/diplomacy/static/order statistics.html
+++ b/diplomacy/static/order statistics.html
@@ -164,6 +164,35 @@
             69%
           </td>
         </tr>
+        <tr bgcolor="#E6EEF0">
+          <td>
+            <b>Spring, 1872</b>
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            71%
+          </td>
+          <td>
+            82%
+          </td>
+        </tr>
       </table>
     </div>
     <h2 style="margin-top: 1cm">
@@ -321,6 +350,35 @@
           </td>
           <td>
             83%
+          </td>
+        </tr>
+        <tr bgcolor="#E6EEF0">
+          <td>
+            <b>Spring, 1872</b>
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            100%
           </td>
         </tr>
       </table>
@@ -482,6 +540,35 @@
             34%
           </td>
         </tr>
+        <tr bgcolor="#E6EEF0">
+          <td>
+            <b>Spring, 1872</b>
+          </td>
+          <td>
+            67%
+          </td>
+          <td>
+            20%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            29%
+          </td>
+          <td>
+            43%
+          </td>
+          <td>
+            23%
+          </td>
+        </tr>
       </table>
     </div>
     <h2 style="margin-top: 1cm">
@@ -640,6 +727,35 @@
           </td>
           <td>
             16%
+          </td>
+        </tr>
+        <tr bgcolor="#E6EEF0">
+          <td>
+            <b>Spring, 1872</b>
+          </td>
+          <td>
+            33%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            14%
+          </td>
+          <td>
+            29%
+          </td>
+          <td>
+            11%
           </td>
         </tr>
       </table>
