--- a/diplomacy/static/supply centre history.html
+++ b/diplomacy/static/supply centre history.html
@@ -26,10 +26,16 @@
           <td bgcolor="#E6EEF0">
             <b>1871</b>
           </td>
+          <td bgcolor="#E6EEF0">
+            <b>1872</b>
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
             <b>ank</b>
+          </td>
+          <td>
+            T
           </td>
           <td>
             T
@@ -54,10 +60,16 @@
           <td>
             F
           </td>
+          <td>
+            F
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
             <b>ber</b>
+          </td>
+          <td>
+            G
           </td>
           <td>
             G
@@ -82,6 +94,9 @@
           <td>
             F
           </td>
+          <td>
+            F
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
@@ -95,6 +110,9 @@
           </td>
           <td>
             A
+          </td>
+          <td>
+            R
           </td>
         </tr>
         <tr bgcolor="#E6EEF0">
@@ -110,10 +128,16 @@
           <td>
             T
           </td>
+          <td>
+            T
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
             <b>con</b>
+          </td>
+          <td>
+            T
           </td>
           <td>
             T
@@ -138,10 +162,16 @@
           <td>
             G
           </td>
+          <td>
+            G
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
             <b>edi</b>
+          </td>
+          <td>
+            E
           </td>
           <td>
             E
@@ -166,6 +196,9 @@
           <td>
             T
           </td>
+          <td>
+            T
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
@@ -180,10 +213,16 @@
           <td>
             E
           </td>
+          <td>
+            E
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
             <b>kie</b>
+          </td>
+          <td>
+            G
           </td>
           <td>
             G
@@ -208,10 +247,16 @@
           <td>
             E
           </td>
+          <td>
+            E
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
             <b>lvp</b>
+          </td>
+          <td>
+            E
           </td>
           <td>
             E
@@ -236,10 +281,16 @@
           <td>
             F
           </td>
+          <td>
+            F
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
             <b>mos</b>
+          </td>
+          <td>
+            R
           </td>
           <td>
             R
@@ -264,10 +315,16 @@
           <td>
             R
           </td>
+          <td>
+            R
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
             <b>nap</b>
+          </td>
+          <td>
+            I
           </td>
           <td>
             I
@@ -292,10 +349,16 @@
           <td>
             E
           </td>
+          <td>
+            E
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
             <b>par</b>
+          </td>
+          <td>
+            F
           </td>
           <td>
             F
@@ -320,10 +383,16 @@
           <td>
             F
           </td>
+          <td>
+            F
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
             <b>rom</b>
+          </td>
+          <td>
+            I
           </td>
           <td>
             I
@@ -348,6 +417,9 @@
           <td>
             T
           </td>
+          <td>
+            T
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
@@ -362,10 +434,16 @@
           <td>
             T
           </td>
+          <td>
+            T
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
             <b>sev</b>
+          </td>
+          <td>
+            R
           </td>
           <td>
             R
@@ -390,6 +468,9 @@
           <td>
             T
           </td>
+          <td>
+            T
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
@@ -404,10 +485,16 @@
           <td>
             F
           </td>
+          <td>
+            F
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
             <b>stp</b>
+          </td>
+          <td>
+            R
           </td>
           <td>
             R
@@ -432,10 +519,16 @@
           <td>
             R
           </td>
+          <td>
+            R
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
             <b>tri</b>
+          </td>
+          <td>
+            A
           </td>
           <td>
             A
@@ -460,6 +553,9 @@
           <td>
             
           </td>
+          <td>
+            
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
@@ -470,6 +566,9 @@
           </td>
           <td>
             I
+          </td>
+          <td>
+            A
           </td>
           <td>
             A
@@ -488,10 +587,16 @@
           <td>
             A
           </td>
+          <td>
+            A
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
             <b>war</b>
+          </td>
+          <td>
+            R
           </td>
           <td>
             R
@@ -618,6 +723,35 @@
           </td>
           <td>
             6
+          </td>
+          <td>
+            7
+          </td>
+          <td>
+            25
+          </td>
+        </tr>
+        <tr>
+          <td bgcolor="#E6EEF0">
+            <b>1872</b>
+          </td>
+          <td>
+            3
+          </td>
+          <td>
+            5
+          </td>
+          <td>
+            6
+          </td>
+          <td>
+            3
+          </td>
+          <td>
+            2
+          </td>
+          <td>
+            7
           </td>
           <td>
             7
