F1872 movement and retreat

--- a/diplomacy/index.html
+++ b/diplomacy/index.html
@@ -119,6 +119,25 @@
     <div class="results"><h3 class="w3-display-middle">Deadline for issuing movement orders is Wednesday 24th February at 1800 GMT.</h3></div>
     <iframe class="status" src="static/F1872Dsta.html" width="100%" style="border:none;"></iframe>
   </div>
+  <div class="rounds">
+    <img class="maps" src="static/Standard (6 Players)-F1872Ma.png" style="width:100%">
+    <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Fall 1872 movement orders</div>
+    <iframe class="results" src="static/F1872Mres.html" width="100%" style="border:none;"></iframe>
+    <iframe class="status" src="static/F1872Msta.html" width="100%" style="border:none;"></iframe>
+  </div>
+  <div class="rounds">
+    <img class="maps" src="static/Standard (6 Players)-F1872R.png" style="width:100%">
+    <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Fall 1872 retreats</div>
+    <iframe class="results" src="static/F1872Rres.html" width="100%" style="border:none;"></iframe>
+    <iframe class="status" src="static/F1872Rsta.html" width="100%" style="border:none;"></iframe>
+  </div>
+  <div class="rounds">
+    <img class="maps" src="static/Standard (6 Players)-F1872B.png" style="width:100%">
+    <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Fall 1872 adjustments</div>
+    <!--iframe class="results" src="static/F1872Ares.html" width="100%" style="border:none;"></iframe-->
+    <div class="results"><h3 class="w3-display-middle">Deadline for issuing build/remove orders is Thursday 25th February at 1200 GMT.</h3></div>
+    <iframe class="status" src="static/F1872Asta.html" width="100%" style="border:none;"></iframe>
+  </div>
 
   <button class="earlier w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
   <button class="later w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
