--- a/diplomacy/static/order statistics.html
+++ b/diplomacy/static/order statistics.html
@@ -193,6 +193,35 @@
             82%
           </td>
         </tr>
+        <tr>
+          <td>
+            <b>Fall, 1872</b>
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            83%
+          </td>
+          <td>
+            33%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            86%
+          </td>
+          <td>
+            43%
+          </td>
+          <td>
+            64%
+          </td>
+        </tr>
       </table>
     </div>
     <h2 style="margin-top: 1cm">
@@ -379,6 +408,35 @@
           </td>
           <td>
             100%
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <b>Fall, 1872</b>
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            80%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            
+          </td>
+          <td>
+            50%
+          </td>
+          <td>
+            40%
+          </td>
+          <td>
+            62%
           </td>
         </tr>
       </table>
@@ -569,6 +627,35 @@
             23%
           </td>
         </tr>
+        <tr>
+          <td>
+            <b>Fall, 1872</b>
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            20%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            67%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            57%
+          </td>
+          <td>
+            29%
+          </td>
+          <td>
+            25%
+          </td>
+        </tr>
       </table>
     </div>
     <h2 style="margin-top: 1cm">
@@ -756,6 +843,35 @@
           </td>
           <td>
             11%
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <b>Fall, 1872</b>
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            20%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            29%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            7%
           </td>
         </tr>
       </table>
