--- a/diplomacy/index.html
+++ b/diplomacy/index.html
@@ -22,9 +22,9 @@
 
 <div class="w3-sidebar w3-bar-block w3-gray" style="width:20%">
   <h3 class="w3-center w3-black">Menu</h3>
-  <button class="w3-bar-item w3-button w3-blue-grey" onclick="maps()">Maps</button>
-  <button class="w3-bar-item w3-button w3-blue-grey" onclick="results()">Results</button>
-  <button class="w3-bar-item w3-button w3-blue-grey" onclick="status()">Status</button>
+  <button class="menu-js w3-bar-item w3-button" title="maps" onclick="menu_js(this)">Maps</button>
+  <button class="menu-js w3-bar-item w3-button" title="results" onclick="menu_js(this)">Results</button>
+  <button class="menu-js w3-bar-item w3-button" title="status" onclick="menu_js(this)">Status</button>
   <hr />
   <a href="order-statistics.html" class="w3-bar-item w3-button">Order statistics</a>
   <a href="supply-centre-history.html" class="w3-bar-item w3-button">Supply centre history</a>
@@ -154,6 +154,7 @@ var slideIndex;
 var nbRounds = document.getElementsByClassName("rounds").length;
 slideIndex = nbRounds;
 plusDivs(0)
+menu_js(document.getElementsByClassName("menu-js")[1]);
 
 function plusDivs(n) {
   var x;
@@ -181,20 +182,18 @@ function changeDisplay(cl, value) {
   return x;
 }
 
-function maps() {
-  changeDisplay("maps", "block");
-  changeDisplay("results", "none");
-  changeDisplay("status", "none");
-}
-function results() {
-  changeDisplay("maps", "none");
-  changeDisplay("results", "block");
-  changeDisplay("status", "none");
-}
-function status() {
-  changeDisplay("maps", "none");
-  changeDisplay("results", "none");
-  changeDisplay("status", "block");
+function menu_js(focus) {
+  var i;
+  var buttons = document.getElementsByClassName("menu-js");
+  for (i = 0; i < buttons.length; i++) {
+    if (buttons[i] === focus) {
+      buttons[i].classList.add("w3-blue-grey");
+      changeDisplay(focus.title, "block");      
+    } else {
+      buttons[i].classList.remove("w3-blue-grey");
+      changeDisplay(buttons[i].title, "none");      
+    }
+  }
 }
   
 </script>
