--- a/diplomacy/static/order statistics.html
+++ b/diplomacy/static/order statistics.html
@@ -222,6 +222,35 @@
             64%
           </td>
         </tr>
+        <tr bgcolor="#E6EEF0">
+          <td>
+            <b>Spring, 1873</b>
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            86%
+          </td>
+          <td>
+            84%
+          </td>
+        </tr>
       </table>
     </div>
     <h2 style="margin-top: 1cm">
@@ -437,6 +466,35 @@
           </td>
           <td>
             62%
+          </td>
+        </tr>
+        <tr bgcolor="#E6EEF0">
+          <td>
+            <b>Spring, 1873</b>
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            75%
+          </td>
+          <td>
+            96%
           </td>
         </tr>
       </table>
@@ -656,6 +714,35 @@
             25%
           </td>
         </tr>
+        <tr bgcolor="#E6EEF0">
+          <td>
+            <b>Spring, 1873</b>
+          </td>
+          <td>
+            67%
+          </td>
+          <td>
+            17%
+          </td>
+          <td>
+            14%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            43%
+          </td>
+          <td>
+            43%
+          </td>
+          <td>
+            26%
+          </td>
+        </tr>
       </table>
     </div>
     <h2 style="margin-top: 1cm">
@@ -866,6 +953,35 @@
           </td>
           <td>
             29%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            7%
+          </td>
+        </tr>
+        <tr bgcolor="#E6EEF0">
+          <td>
+            <b>Spring, 1873</b>
+          </td>
+          <td>
+            33%
+          </td>
+          <td>
+            17%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            0%
           </td>
           <td>
             0%
