--- a/diplomacy/static/supply centre history.html
+++ b/diplomacy/static/supply centre history.html
@@ -29,10 +29,16 @@
           <td bgcolor="#E6EEF0">
             <b>1872</b>
           </td>
+          <td bgcolor="#E6EEF0">
+            <b>1873</b>
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
             <b>ank</b>
+          </td>
+          <td>
+            T
           </td>
           <td>
             T
@@ -63,10 +69,16 @@
           <td>
             F
           </td>
+          <td>
+            F
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
             <b>ber</b>
+          </td>
+          <td>
+            G
           </td>
           <td>
             G
@@ -97,6 +109,9 @@
           <td>
             F
           </td>
+          <td>
+            F
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
@@ -110,6 +125,9 @@
           </td>
           <td>
             A
+          </td>
+          <td>
+            R
           </td>
           <td>
             R
@@ -131,10 +149,16 @@
           <td>
             T
           </td>
+          <td>
+            T
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
             <b>con</b>
+          </td>
+          <td>
+            T
           </td>
           <td>
             T
@@ -165,10 +189,16 @@
           <td>
             E
           </td>
+          <td>
+            E
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
             <b>edi</b>
+          </td>
+          <td>
+            E
           </td>
           <td>
             E
@@ -199,6 +229,9 @@
           <td>
             T
           </td>
+          <td>
+            T
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
@@ -212,6 +245,9 @@
           </td>
           <td>
             E
+          </td>
+          <td>
+            F
           </td>
           <td>
             F
@@ -233,10 +269,16 @@
           <td>
             E
           </td>
+          <td>
+            E
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
             <b>lon</b>
+          </td>
+          <td>
+            E
           </td>
           <td>
             E
@@ -267,10 +309,16 @@
           <td>
             E
           </td>
+          <td>
+            E
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
             <b>mar</b>
+          </td>
+          <td>
+            F
           </td>
           <td>
             F
@@ -301,6 +349,9 @@
           <td>
             R
           </td>
+          <td>
+            R
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
@@ -318,10 +369,16 @@
           <td>
             R
           </td>
+          <td>
+            R
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
             <b>nap</b>
+          </td>
+          <td>
+            I
           </td>
           <td>
             I
@@ -352,10 +409,16 @@
           <td>
             E
           </td>
+          <td>
+            E
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
             <b>par</b>
+          </td>
+          <td>
+            F
           </td>
           <td>
             F
@@ -386,10 +449,16 @@
           <td>
             F
           </td>
+          <td>
+            F
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
             <b>rom</b>
+          </td>
+          <td>
+            I
           </td>
           <td>
             I
@@ -420,6 +489,9 @@
           <td>
             T
           </td>
+          <td>
+            T
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
@@ -437,10 +509,16 @@
           <td>
             A
           </td>
+          <td>
+            A
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
             <b>sev</b>
+          </td>
+          <td>
+            R
           </td>
           <td>
             R
@@ -471,6 +549,9 @@
           <td>
             T
           </td>
+          <td>
+            T
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
@@ -488,10 +569,16 @@
           <td>
             F
           </td>
+          <td>
+            F
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
             <b>stp</b>
+          </td>
+          <td>
+            R
           </td>
           <td>
             R
@@ -522,10 +609,16 @@
           <td>
             R
           </td>
+          <td>
+            R
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
             <b>tri</b>
+          </td>
+          <td>
+            A
           </td>
           <td>
             A
@@ -556,6 +649,9 @@
           <td>
             T
           </td>
+          <td>
+            T
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
@@ -566,6 +662,9 @@
           </td>
           <td>
             I
+          </td>
+          <td>
+            A
           </td>
           <td>
             A
@@ -590,10 +689,16 @@
           <td>
             A
           </td>
+          <td>
+            A
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
             <b>war</b>
+          </td>
+          <td>
+            R
           </td>
           <td>
             R
@@ -734,6 +839,35 @@
         <tr>
           <td bgcolor="#E6EEF0">
             <b>1872</b>
+          </td>
+          <td>
+            4
+          </td>
+          <td>
+            6
+          </td>
+          <td>
+            7
+          </td>
+          <td>
+            1
+          </td>
+          <td>
+            2
+          </td>
+          <td>
+            7
+          </td>
+          <td>
+            7
+          </td>
+          <td>
+            29
+          </td>
+        </tr>
+        <tr>
+          <td bgcolor="#E6EEF0">
+            <b>1873</b>
           </td>
           <td>
             4
