--- a/diplomacy/index.html
+++ b/diplomacy/index.html
@@ -144,6 +144,24 @@
     <div class="results"><h3 class="w3-display-middle">Deadline for issuing movement orders is Sunday 28th February at 1200 GMT.</h3></div>
     <iframe class="status" src="static/S1873Dsta.html" width="100%" style="border:none;"></iframe>
   </div>
+  <div class="rounds">
+    <img class="maps" src="static/Standard (6 Players)-S1873Ma.png" style="width:100%">
+    <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Spring 1873 movement orders</div>
+    <iframe class="results" src="static/S1873Mres.html" width="100%" style="border:none;"></iframe>
+    <iframe class="status" src="static/S1873Msta.html" width="100%" style="border:none;"></iframe>
+  </div>
+  <div class="rounds">
+    <img class="maps" src="static/Standard (6 Players)-S1873R.png" style="width:100%">
+    <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Spring 1873 retreats</div>
+    <iframe class="results" src="static/S1873Rres.html" width="100%" style="border:none;"></iframe>
+    <iframe class="status" src="static/S1873Rsta.html" width="100%" style="border:none;"></iframe>
+  </div>
+  <div class="rounds">
+    <img class="maps" src="static/Standard (6 Players)-F1873M.png" style="width:100%">
+    <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Fall 1873 starting position</div>
+    <div class="results"><h3 class="w3-display-middle">Deadline for issuing movement orders is Wednesday 24th February at 1800 GMT.</h3></div>
+    <iframe class="status" src="static/F1873Dsta.html" width="100%" style="border:none;"></iframe>
+  </div>
 
   <button class="earlier w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
   <button class="later w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
