--- a/diplomacy/index.html
+++ b/diplomacy/index.html
@@ -159,7 +159,7 @@
   <div class="rounds">
     <img class="maps" src="static/Standard (6 Players)-F1873M.png" style="width:100%">
     <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Fall 1873 starting position</div>
-    <div class="results"><h3 class="w3-display-middle">Deadline for issuing movement orders is Wednesday 24th February at 1800 GMT.</h3></div>
+    <div class="results"><h3 class="w3-display-middle">Deadline for issuing movement orders is Wednesday 3rd March at 1200 GMT.</h3></div>
     <iframe class="status" src="static/F1873Dsta.html" width="100%" style="border:none;"></iframe>
   </div>
 
