--- a/diplomacy/static/order statistics.html
+++ b/diplomacy/static/order statistics.html
@@ -251,6 +251,35 @@
             84%
           </td>
         </tr>
+        <tr>
+          <td>
+            <b>Fall, 1873</b>
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            71%
+          </td>
+          <td>
+            57%
+          </td>
+          <td>
+            76%
+          </td>
+        </tr>
       </table>
     </div>
     <h2 style="margin-top: 1cm">
@@ -495,6 +524,35 @@
           </td>
           <td>
             96%
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <b>Fall, 1873</b>
+          </td>
+          <td>
+            
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            
+          </td>
+          <td>
+            50%
+          </td>
+          <td>
+            25%
+          </td>
+          <td>
+            75%
           </td>
         </tr>
       </table>
@@ -743,6 +801,35 @@
             26%
           </td>
         </tr>
+        <tr>
+          <td>
+            <b>Fall, 1873</b>
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            29%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            43%
+          </td>
+          <td>
+            29%
+          </td>
+          <td>
+            29%
+          </td>
+        </tr>
       </table>
     </div>
     <h2 style="margin-top: 1cm">
@@ -988,6 +1075,35 @@
           </td>
           <td>
             7%
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <b>Fall, 1873</b>
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            14%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            14%
+          </td>
+          <td>
+            14%
+          </td>
+          <td>
+            6%
           </td>
         </tr>
       </table>
