--- a/diplomacy/index.html
+++ b/diplomacy/index.html
@@ -172,7 +172,7 @@
     <img class="maps" src="static/Standard (6 Players)-F1873R.png" style="width:100%">
     <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Fall 1873 retreats</div>
     <div class="results"><h3 class="w3-display-middle">Russian army displaced from Munich to give a retreat or disband order as soon as possible. Adjustment phase will then follow.</h3></div>
-    <iframe class="results" src="static/F1873Rres.html" width="100%" style="border:none;"></iframe>
+    <!--iframe class="results" src="static/F1873Rres.html" width="100%" style="border:none;"></iframe-->
     <iframe class="status" src="static/F1873Rsta.html" width="100%" style="border:none;"></iframe>
   </div>
 
