--- a/diplomacy/index.html
+++ b/diplomacy/index.html
@@ -169,12 +169,25 @@
     <iframe class="status" src="static/F1873Msta.html" width="100%" style="border:none;"></iframe>
   </div>
   <div class="rounds">
-    <img class="maps" src="static/Standard (6 Players)-F1873R.png" style="width:100%">
+    <img class="maps" src="static/Standard (6 Players)-F1873Ra.png" style="width:100%">
     <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Fall 1873 retreats</div>
-    <div class="results"><h3 class="w3-display-middle">Russian army displaced from Munich to give a retreat or disband order as soon as possible. Adjustment phase will then follow.</h3></div>
-    <!--iframe class="results" src="static/F1873Rres.html" width="100%" style="border:none;"></iframe-->
+    <!--div class="results"><h3 class="w3-display-middle">Russian army displaced from Munich to give a retreat or disband order as soon as possible. Adjustment phase will then follow.</h3></div-->
+    <iframe class="results" src="static/F1873Rres.html" width="100%" style="border:none;"></iframe>
     <iframe class="status" src="static/F1873Rsta.html" width="100%" style="border:none;"></iframe>
   </div>
+  <div class="rounds">
+    <img class="maps" src="static/Standard (6 Players)-F1873B.png" style="width:100%">
+    <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Fall 1873 adjustments</div>
+    <!--iframe class="results" src="static/F1873Ares.html" width="100%" style="border:none;"></iframe-->
+    <div class="results"><h3 class="w3-display-middle">Deadline for issuing build/remove orders is Thursday 4th March at 1200 GMT. Affects England (+1), France (+2) and Russia (-1).</h3></div>
+    <iframe class="status" src="static/F1873Asta.html" width="100%" style="border:none;"></iframe>
+  </div>
+  <!--div class="rounds">
+    <img class="maps" src="static/Standard (6 Players)-S1874M.png" style="width:100%">
+    <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Spring 1874 starting position</div>
+    <div class="results"><h3 class="w3-display-middle">Deadline for issuing movement orders is Sunday 7th March at 1200 GMT.</h3></div>
+    <iframe class="status" src="static/S1874Dsta.html" width="100%" style="border:none;"></iframe>
+  </div-->
 
   <button class="earlier w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
   <button class="later w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
