--- a/diplomacy/static/F1873Asta.html
+++ b/diplomacy/static/F1873Asta.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h2 class="centered">
-      Status for Fall, 1873 (Retreat)
+      Status for Fall, 1873 (Adjustment)
     </h2>
     <h3>
       Unit Locations:
@@ -56,7 +56,7 @@
             
           </td>
           <td>
-            <u>A</u> <u>mun</u>
+            A boh
           </td>
           <td bgcolor="F0F8FF">
             A alb
@@ -239,7 +239,7 @@
       <b>Russia</b>
     </div>
     <div class="indent2cm">
-      Russia: A mun -&gt; boh<br>
+      No orders submitted.<br>
     </div>
     <div class="indent1cm">
       <b>Turkey</b>
@@ -260,10 +260,16 @@
       Constantinople, Greece, Naples, Smyrna, Tunis (7 total).<br>
     </div>
     <h3>
-      Dislodged Units:
+      Adjustments:
     </h3>
     <div class="indent1cm">
-      <b>Russia:</b> Army Munich.<br>
+      <b>Austria</b>: 4 supply centers, 4 units. No units to build or remove.<br><b>England</b>: 
+      7 supply centers, 6 units. 1 unit may be built.<br><b>France</b>: 9 
+      supply centers, 7 units. 2 units may be built.<br><b>Germany</b>: 1 
+      supply center is, 1 unit. No units to build or remove.<br><b>Italy</b>: 
+      No supply centers are, No units. No units to build or remove.<br><b>Russia</b>: 
+      6 supply centers, 7 units. 1 unit must be removed.<br><b>Turkey</b>: 7 
+      supply centers, 7 units. No units to build or remove.<br>
     </div>
   </body>
 </html>
