--- a/diplomacy/static/supply centre history.html
+++ b/diplomacy/static/supply centre history.html
@@ -32,10 +32,16 @@
           <td bgcolor="#E6EEF0">
             <b>1873</b>
           </td>
+          <td bgcolor="#E6EEF0">
+            <b>1874</b>
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
             <b>ank</b>
+          </td>
+          <td>
+            T
           </td>
           <td>
             T
@@ -72,6 +78,9 @@
           <td>
             F
           </td>
+          <td>
+            F
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
@@ -92,10 +101,16 @@
           <td>
             E
           </td>
+          <td>
+            E
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
             <b>bre</b>
+          </td>
+          <td>
+            F
           </td>
           <td>
             F
@@ -132,6 +147,9 @@
           <td>
             A
           </td>
+          <td>
+            A
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
@@ -152,10 +170,16 @@
           <td>
             T
           </td>
+          <td>
+            T
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
             <b>con</b>
+          </td>
+          <td>
+            T
           </td>
           <td>
             T
@@ -192,10 +216,16 @@
           <td>
             E
           </td>
+          <td>
+            E
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
             <b>edi</b>
+          </td>
+          <td>
+            E
           </td>
           <td>
             E
@@ -232,6 +262,9 @@
           <td>
             T
           </td>
+          <td>
+            T
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
@@ -245,6 +278,9 @@
           </td>
           <td>
             E
+          </td>
+          <td>
+            F
           </td>
           <td>
             F
@@ -272,10 +308,16 @@
           <td>
             F
           </td>
+          <td>
+            F
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
             <b>lon</b>
+          </td>
+          <td>
+            E
           </td>
           <td>
             E
@@ -312,10 +354,16 @@
           <td>
             E
           </td>
+          <td>
+            E
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
             <b>mar</b>
+          </td>
+          <td>
+            F
           </td>
           <td>
             F
@@ -352,6 +400,9 @@
           <td>
             R
           </td>
+          <td>
+            R
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
@@ -368,6 +419,9 @@
           </td>
           <td>
             R
+          </td>
+          <td>
+            G
           </td>
           <td>
             G
@@ -392,6 +446,9 @@
           <td>
             T
           </td>
+          <td>
+            T
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
@@ -412,10 +469,16 @@
           <td>
             E
           </td>
+          <td>
+            E
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
             <b>par</b>
+          </td>
+          <td>
+            F
           </td>
           <td>
             F
@@ -452,6 +515,9 @@
           <td>
             F
           </td>
+          <td>
+            F
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
@@ -468,6 +534,9 @@
           </td>
           <td>
             I
+          </td>
+          <td>
+            E
           </td>
           <td>
             E
@@ -492,6 +561,9 @@
           <td>
             R
           </td>
+          <td>
+            R
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
@@ -512,10 +584,16 @@
           <td>
             A
           </td>
+          <td>
+            A
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
             <b>sev</b>
+          </td>
+          <td>
+            R
           </td>
           <td>
             R
@@ -552,6 +630,9 @@
           <td>
             T
           </td>
+          <td>
+            T
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
@@ -572,10 +653,16 @@
           <td>
             F
           </td>
+          <td>
+            F
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
             <b>stp</b>
+          </td>
+          <td>
+            R
           </td>
           <td>
             R
@@ -612,10 +699,16 @@
           <td>
             R
           </td>
+          <td>
+            R
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
             <b>tri</b>
+          </td>
+          <td>
+            A
           </td>
           <td>
             A
@@ -652,6 +745,9 @@
           <td>
             T
           </td>
+          <td>
+            T
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
@@ -668,6 +764,9 @@
           </td>
           <td>
             A
+          </td>
+          <td>
+            F
           </td>
           <td>
             F
@@ -692,10 +791,16 @@
           <td>
             A
           </td>
+          <td>
+            A
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
             <b>war</b>
+          </td>
+          <td>
+            R
           </td>
           <td>
             R
@@ -868,6 +973,35 @@
         <tr>
           <td bgcolor="#E6EEF0">
             <b>1873</b>
+          </td>
+          <td>
+            4
+          </td>
+          <td>
+            7
+          </td>
+          <td>
+            9
+          </td>
+          <td>
+            1
+          </td>
+          <td>
+            &#160;
+          </td>
+          <td>
+            6
+          </td>
+          <td>
+            7
+          </td>
+          <td>
+            33
+          </td>
+        </tr>
+        <tr>
+          <td bgcolor="#E6EEF0">
+            <b>1874</b>
           </td>
           <td>
             4
