--- a/diplomacy/index.html
+++ b/diplomacy/index.html
@@ -207,19 +207,19 @@
     <iframe class="status" src="static/F1874Msta.html" width="100%" style="border:none;"></iframe>
   </div>
   <div class="rounds">
-    <img class="maps" src="static/Standard (6 Players)-F1874R.png" style="width:100%">
+    <img class="maps" src="static/Standard (6 Players)-F1874Ra.png" style="width:100%">
     <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Fall 1874 retreats</div>
-    <div class="results"><h3 class="w3-display-middle">Russian army displaced from Rumania to give a retreat or disband order as soon as possible. German army dislodged from Munich may wish to go into retirement. Adjustment phase will then follow.</h3></div>
-    <!--iframe class="results" src="static/F1874Rres.html" width="100%" style="border:none;"></iframe-->
+    <!--div class="results"><h3 class="w3-display-middle">Russian army displaced from Rumania to give a retreat or disband order as soon as possible. German army dislodged from Munich may wish to go into retirement. Adjustment phase will then follow.</h3></div-->
+    <iframe class="results" src="static/F1874Rres.html" width="100%" style="border:none;"></iframe>
     <iframe class="status" src="static/F1874Rsta.html" width="100%" style="border:none;"></iframe>
   </div>
-  <!--div class="rounds">
-    <img class="maps" src="static/Standard (6 Players)-F1874Ba.png" style="width:100%">
+  <div class="rounds">
+    <img class="maps" src="static/Standard (6 Players)-F1874B.png" style="width:100%">
     <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Fall 1874 adjustments</div>
-    <iframe class="results" src="static/F1874Ares.html" width="100%" style="border:none;"></iframe>
-    <div class="results"><h3 class="w3-display-middle">Deadline for issuing build/remove orders is Thursday 4th March at 1200 GMT. Affects England (+1), France (+2) and Russia (-1).</h3></div>
+    <!--iframe class="results" src="static/F1874Ares.html" width="100%" style="border:none;"></iframe-->
+    <div class="results"><h3 class="w3-display-middle">Deadline for issuing build/remove orders is Wednesday 10th March at 1800 GMT. Affects Austria (-1), France (+1), Russia (-1) and Turkey (+2).</h3></div>
     <iframe class="status" src="static/F1874Asta.html" width="100%" style="border:none;"></iframe>
-  </div-->
+  </div>
 
   <button class="earlier w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
   <button class="later w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
